--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,4 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Poppins:wght@300;400;500;600&display=swap');
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  color: $darkBrown;
+}
+
+img {
+  width: 100%;
+}
+
+input {
+  outline: none;
+  border-color: $darkBrown;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 3px;
+  background-color: transparent;
 }
