--- a/app/assets/styles/base/_mixins.css
+++ b/app/assets/styles/base/_mixins.css
@@ -1,3 +1,9 @@
+@define-mixin atSmallest {
+  @media (min-width: 354px) {
+    @mixin-content;
+  }
+}
+
 @define-mixin atSmall {
   @media (min-width: 576px) {
     @mixin-content;
