--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -8,4 +8,29 @@
   &--fw {
     width: 100%;
   }
+
+  &--card {
+    border: 0;
+    padding: 0 .75rem;
+    border-radius: 5px;
+    box-shadow:
+      2px 2px 12px rgba(0, 0, 0, .6),
+      inset 2px 2px 5px rgba(255, 255, 255, 1),
+      inset -2px -2px 5px rgba(0, 0, 0, .5)
+    ;
+    font-size: 1.25rem;
+
+    @mixin atSmallest {
+      font-size: 1.5rem;
+    }
+  }
+
+  &--card:active {
+    transform: translate(1px, 1px);
+    box-shadow:
+      2px 2px 12px rgba(0, 0, 0, .6),
+      inset 2px 2px 5px rgba(255, 255, 255, 1),
+      inset -2px -2px 5px rgba(0, 0, 0, .5)
+    ;
+  }
 }
