--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -5,4 +5,11 @@
 @import 'modules/_hero';
 @import 'modules/_form';
 @import 'modules/_btn';
+@import 'modules/_info-bar';
+@import 'modules/_wrapper';
+@import 'modules/_deals';
+@import 'modules/_card';
+@import 'modules/_services';
+@import 'modules/_advantages';
+@import 'modules/_footer';
 
