--- a/app/assets/styles/modules/_card.css
+++ b/app/assets/styles/modules/_card.css
@@ -1,8 +1,33 @@
 .card {
 
+  @mixin atLarge {
+    display: flex;
+    margin-bottom: 4rem;
+  }
+
+  &__image {
+    display: block;
+    min-height: 100%;
+    object-fit: cover;
+  }
+
   &__text-content {
     padding: .75rem 2.25rem 2rem;
     text-align: center;
+
+    @mixin atSmall {
+      padding: .75rem 4rem 2rem;
+    }
+
+    @mixin atMedium {
+      padding: 1rem 10rem 3rem;
+    }
+
+    @mixin atLarge {
+      padding: .75rem 1.5rem 2rem;
+      flex: 1 0 25rem;
+      box-sizing: border-box;
+    }
   }
 
   &__tier {
@@ -14,6 +39,13 @@
       font-size: 1.75rem;
       margin: 1.25rem 0 1.5rem;
     }
+  }
+
+  &__icon {
+    width: 2.5rem;
+    height: 2.5rem;
+    vertical-align: middle;
+    margin-right: .5rem;
   }
 
   &__model {
@@ -52,6 +84,10 @@
   &__deal {
     display: flex;
     justify-content: space-between;
+
+    @mixin atSmall {
+      justify-content: space-around;
+    }
   }
 
   &__price {
