--- a/app/assets/styles/modules/_deals.css
+++ b/app/assets/styles/modules/_deals.css
@@ -1,5 +1,11 @@
 .deals {
 
+  &__content {
+    @mixin atLarge {
+      padding: 0 5rem;
+    }
+  }
+
   &__heading {
     font-size: 2.25rem;
     font-weight: 500;
@@ -7,14 +13,47 @@
     margin: 1.5rem 0 .75rem;
     border-right: 3px solid $lightBrown;
     width: 15rem;
+
+    @mixin atSmall {
+      width: 21rem;
+    }
+
+    @mixin atMedium {
+      border-width: 4px;
+      margin-top: 2rem;
+    }
+
+    @mixin atLarge {
+      font-size: 2.5rem;
+      width: 24rem;
+      margin-top: 2.25rem;
+    }
   }
 
   &__slogan {
     line-height: 1.5;
     margin-top: 0;
+
+    @mixin atSmall {
+      text-align: right;
+    }
+
+    @mixin atMedium {
+      font-size: 1.25rem;
+      margin: 1.25rem 0 1.75rem;
+    }
+
+    @mixin atLarge {
+      font-size: 1.5rem;
+      margin: 1.75rem 0 2.75rem;
+    }
   }
 
   &__content {
     border-bottom: 1.5rem solid $mainLight;
+
+    @mixin atLarge {
+      border-bottom: none;
+    }
   }
 }
