--- a/app/assets/styles/modules/_footer.css
+++ b/app/assets/styles/modules/_footer.css
@@ -38,6 +38,10 @@
     font-size: 1.25rem;
     font-weight: 500;
     margin-bottom: .75rem;
+
+    @mixin atSmall {
+      margin-top: .5rem;
+    }
   }
 
   &__links {
@@ -53,6 +57,17 @@
 
   &__address {
     line-height: 1.5;
+
+    span {
+      padding-left: 1.875rem;
+    }
+  }
+
+  &__icon {
+    width: 1.1rem;
+    height: 1.1rem;
+    vertical-align: -15%;
+    margin-right: .5rem;
   }
 
   &__newsletter {
@@ -75,10 +90,16 @@
     position: absolute;
     right: 0;
     top: 0;
-    display: inline-block;
+    display: inline-flex;
     height: 100%;
-    width: 3rem;
+    width: 2.5rem;
     background-color: $mainRed;
+
+    svg {
+      width: 55%;
+      height: 55%;
+      margin: auto .375rem;
+    }
   }
 
   &__copy {
