--- a/app/assets/styles/modules/_services.css
+++ b/app/assets/styles/modules/_services.css
@@ -8,6 +8,10 @@
     letter-spacing: .5rem;
     text-align: center;
     margin-bottom: 0;
+
+    @mixin atSmall {
+      font-size: 1.25rem;
+    }
   }
 
   &__slogan {
@@ -15,6 +19,15 @@
     margin: .375rem 0 2rem;
     text-align: center;
     font-weight: 500;
+
+    @mixin atSmall {
+      font-size: 2rem;
+    }
+
+    @mixin atMedium {
+      font-size: 2.5rem;
+      margin: .5rem 0 3rem;
+    }
 
     span {
       border-bottom: 3px solid $lightBrown;
