--- a/app/assets/styles/modules/_services.css
+++ b/app/assets/styles/modules/_services.css
@@ -12,6 +12,16 @@
     @mixin atSmall {
       font-size: 1.25rem;
     }
+
+    @mixin atMedium {
+      font-size: 1.375rem;
+      letter-spacing: .75rem;
+    }
+
+    @mixin atXLarge {
+      font-size: 1.5rem;
+      letter-spacing: 1rem;
+    }
   }
 
   &__slogan {
@@ -26,11 +36,20 @@
 
     @mixin atMedium {
       font-size: 2.5rem;
-      margin: .5rem 0 3rem;
+      margin: .75rem 0 3rem;
+    }
+
+    @mixin atXLarge {
+      font-size: 4rem;
+      margin-bottom: 5rem;
     }
 
     span {
       border-bottom: 3px solid $lightBrown;
+
+      @mixin atXLarge {
+        border-width: 5px;
+      }
     }
   }
 }
