--- a/app/assets/styles/modules/_advantages.css
+++ b/app/assets/styles/modules/_advantages.css
@@ -3,6 +3,10 @@
   text-align: center;
   margin-bottom: 2rem;
 
+  @mixin atXLarge {
+    margin-bottom: 4rem;
+  }
+
   &__shape {
     width: 6rem;
     height: 6rem;
