--- a/app/assets/styles/modules/_card.css
+++ b/app/assets/styles/modules/_card.css
@@ -2,12 +2,43 @@
 
   @mixin atLarge {
     display: flex;
-    margin-bottom: 4rem;
+    max-width: 1100px;
+    height: 23rem;
+    margin-bottom: 5rem;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 2px 2px 15px rgba(0, 0, 0, .5);
+
+    picture {
+      flex: auto;
+    }
+
+    &--img-right {
+      box-shadow: -2px 2px 15px rgba(0, 0, 0, .5);
+
+      picture {
+        order: 2;
+      }
+    }
+  }
+
+  @mixin atXLarge {
+    margin-bottom: 7rem;
+  }
+
+  &--reduced-m-large {
+    @mixin atLarge {
+      margin-bottom: 3rem;
+    }
+
+    @mixin atXLarge {
+      margin-bottom: 5rem;
+    }
   }
 
   &__image {
     display: block;
-    min-height: 100%;
+    height: 100%;
     object-fit: cover;
   }
 
@@ -25,7 +56,8 @@
 
     @mixin atLarge {
       padding: .75rem 1.5rem 2rem;
-      flex: 1 0 25rem;
+      width: 23rem;
+      flex: none;
       box-sizing: border-box;
     }
   }
@@ -101,6 +133,12 @@
 
     @mixin atSmallest {
       font-size: 2.5rem;
+    }
+  }
+
+  &__price--right {
+    @mixin atLarge {
+      order: 2;
     }
   }
 
