--- a/app/assets/styles/modules/_footer.css
+++ b/app/assets/styles/modules/_footer.css
@@ -6,6 +6,10 @@
   color: $mainLight;
   overflow: auto;
 
+  @mixin atXLarge {
+    background-image: url('assets/images/footer--xl.png');
+  }
+
   &__overlay {
     position: absolute;
     z-index: 1;
@@ -34,6 +38,12 @@
    margin-bottom: 2rem;
   }
 
+  &__section {
+    @mixin atXLarge {
+      padding-left: 2rem;
+    }
+  }
+
   &__heading {
     font-size: 1.25rem;
     font-weight: 500;
@@ -41,6 +51,10 @@
 
     @mixin atSmall {
       margin-top: .5rem;
+    }
+
+    @mixin atXLarge {
+      margin: 2.5rem 0 1.5rem;
     }
   }
 
@@ -108,6 +122,11 @@
     text-align: center;
     margin: 1.5rem 0;
     line-height: 1.5;
+
+    @mixin atXLarge {
+      text-align: left;
+      margin-left: 3.125rem;
+    }
 
     span {
       font-weight: 500;
