--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -12,16 +12,46 @@
   &--2-col-md {
     @mixin atMedium {
       grid-template-columns: 1fr 1fr;
-      grid-column-gap: 2rem;
+      grid-column-gap: 3rem;
+    }
+  }
+
+  &--4-col-xl {
+    @mixin atXLarge {
+      grid-template-columns: repeat(4, 1fr);
+    }
+  }
+
+  &--gutters {
+    grid-column-gap: 8rem;
+  }
+
+  &--2-col-lg {
+    @mixin atLarge {
+      grid-template-columns: 1fr 2fr;
+      align-items: center;
+      padding-bottom: 1rem;
+    }
+
+    @mixin atXLarge {
+      grid-template-columns: 1fr 3fr;
+      padding-bottom: 1.5rem;
     }
   }
 
   &__sm-12 {
+    padding-bottom: 1rem;
+
     @mixin atSmall {
       grid-column: 2 / 3;
       grid-row: 1 / 2;
       padding-top: 1.875rem;
+      padding-bottom: 1rem;
     }
-  }
-  
+
+    @mixin atXLarge {
+      grid-column: 4 / 5;
+      padding: 0;
+    }
+  } 
 }
