--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -4,9 +4,14 @@
   color: #fff;
   font-size: 1.5rem;
   padding: .5rem 0;
+  transition: opacity .2s ease-out;
 
   &--fw {
     width: 100%;
+
+    &:hover {
+      opacity: 0.8;
+    }
   }
 
   &--card {
