--- a/app/assets/styles/modules/_card.css
+++ b/app/assets/styles/modules/_card.css
@@ -11,6 +11,7 @@
 
     picture {
       flex: auto;
+      overflow: hidden;
     }
 
     &--img-right {
@@ -40,6 +41,14 @@
     display: block;
     height: 100%;
     object-fit: cover;
+
+    @mixin atLarge {
+      transition: transform .5s ease-out;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
   }
 
   &__text-content {
