--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -13,7 +13,6 @@
     border-radius: 10px;
 
     @mixin atSmallest {
-      margin-top: 75px;
       padding: 1.25rem 0 1rem;
       width: 16rem;
     }
@@ -63,30 +62,102 @@
   }
 
   &__hamburger {
-    width: 20px;
-    height: 20px;
+    width: 24px;
+    height: 24px;
     position: absolute;
-    top: 20px;
-    right: 20px;
-    background-color: $darkBrown;
+    z-index: 10;
+    top: 24px;
+    right: 24px;
 
     @mixin atLarge {
       display: none;
     }
+
+    &::before {
+      content: '';
+      width: 100%;
+      height: 4px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: $darkBrown;
+      transform-origin: top left;
+      transition: transform .3s ease-out;
+    }
+
+    &__middle {
+      width: 100%;
+      height: 4px;
+      position: absolute;
+      top: 10px;
+      left: 0;
+      background-color: $darkBrown;
+      transform-origin: 0 50%;
+      transition: all .3s ease-out;
+    }
+
+    &::after {
+      content: '';
+      width: 100%;
+      height: 4px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      background-color: $darkBrown;
+      transform-origin: bottom left;
+      transition: transform .3s ease-out;
+    }
+
+    &--close-x {
+      &::before {
+        transform: rotate(45deg) scaleX(1.25);
+      }
+
+      .site-header__hamburger__middle {
+        opacity: 0;
+        transform: scaleX(0);
+      }
+
+      &::after {
+        transform: rotate(-45deg) scaleX(1.25);
+      }
+    }
   }
 
   &__menu {
-    display: none;
+    opacity: 0;
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    background-color: rgba(231, 229, 216, .97);
+    transform: scale(0);
+    transform-origin: top right;
+    transition: all .3s ease-out;
 
     ul {
       list-style-type: none;
       margin: 0;
-      padding: 0;
+      padding: 1.5em 0 2em;
+      transform: scale(1.3);
+      opacity: 0;
+
+      @mixin atLarge {
+        padding: 0;
+        transform: scale(1);
+        opacity: 1;
+      }
     }
 
     li {
-      display: inline-block;
+      display: block;
       padding: 2em 1em 0;
+      text-align: center;
+
+      @mixin atLarge {
+        display: inline-block;
+      }
 
       @mixin atXLarge {
        padding: 1.875em 1.25em 0;
@@ -96,7 +167,18 @@
     a {
       text-decoration: none;
       color: $darkBrown;
-      font-size: 1.25rem;
+      font-size: 1.5rem;
+      text-shadow: 
+        1px 1px 0 rgb(255, 255, 255),
+        -1px -1px 0 rgb(255, 255, 255),
+        -1px 1px 0 rgb(255, 255, 255),
+        1px -1px 0 rgb(255, 255, 255)
+      ;
+
+      @mixin atLarge {
+        text-shadow: none;
+        font-size: 1.25rem;
+      }
 
       @mixin atXLarge {
         font-size: 1.5rem;
@@ -107,10 +189,32 @@
       }
     }
 
+    @mixin atSmall {
+      width: 15rem;
+    }
+
     @mixin atLarge {
       display: block;
+      opacity: 1;
+      z-index: 2;
+      transform: scale(1);
       float: right;
+      position: static;
+      width: auto;
+      height: auto;
+      background-color: transparent;
+    }
 
+    &--is-visible {
+      opacity: 1;
+      z-index: 2;
+      transform: scale(1);
+
+      ul {
+        transform: scale(1);
+        opacity: 1;
+        transition: .3s all ease-out .3s;
+      }
     }
   }
 }
